--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-stripe-checkout": "^2.6.3",
     "redux": "^3.7.1",
     "redux-form": "^7.4.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "socket.io-client": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
