--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "axios": "^0.16.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
+    "react": "^17.0.1",
     "react-bootstrap": "^0.31.3",
-    "react-dom": "^15.6.1",
+    "react-dom": "^17.0.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-scripts": "^4.0.1",
@@ -16,7 +17,16 @@
     "redux": "^3.7.1",
     "redux-form": "^7.4.3",
     "redux-thunk": "^2.2.0",
-    "socket.io-client": "^3.0.4"
+    "socket.io-client": "^3.0.4",
+    "@fortawesome/fontawesome-free": "5.14.0",
+    "@popperjs/core": "2.5.1",
+    "@tailwindcss/custom-forms": "0.2.1",
+    "chart.js": "2.9.3",
+    "gulp": "4.0.2",
+    "gulp-append-prepend": "1.0.8",
+    "react-google-maps": "9.4.5",
+    "react-router": "5.2.0",
+    "tailwindcss": "1.8.10"
   },
   "scripts": {
     "start": "react-scripts start",
